--- a/Vulcanizare.WEB/Pages/Tires/Index.cshtml
+++ b/Vulcanizare.WEB/Pages/Tires/Index.cshtml
@@ -7,9 +7,14 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<div class="d-flex justify-content-between">
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+    <p>
+        <a href="javascript:history.back()">Back</a>
+    </p>
+</div>
 <table class="table">
     <thead>
         <tr>
