--- a/Vulcanizare.WEB/Pages/Users/Index.cshtml
+++ b/Vulcanizare.WEB/Pages/Users/Index.cshtml
@@ -7,6 +7,15 @@
 
 <h1>Index</h1>
 
+<div class="d-flex justify-content-between">
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+    <p>
+        <a href="javascript:history.back()">Back</a>
+    </p>
+</div>
+
 <table class="table">
     <thead>
         <tr>
@@ -49,6 +58,7 @@
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> |
             </td>
         </tr>
 }
