--- a/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
+++ b/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,13 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/">Home</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/UserPages/Appointment">Make an Appointment</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/">Tire Shopping</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/">Tire Hotel</a>
                             </li>
                             
                         }
