Partea de programare pe web e gata

--- a/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
+++ b/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,20 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Vulcanizare</a>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                {
+                    <a class="navbar-brand" asp-area="" asp-page="/UserPages/Index">Vulcanizare</a>
+
+                }
+                else if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                {
+                    <a class="navbar-brand" asp-area="" asp-page="/Admin/Dashboard">Vulcanizare</a>
+
+                }
+                else
+                {
+                    <a class="navbar-brand" asp-area="" asp-page="/Index">Vulcanizare</a>
+                }
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
