Tire Hotel + Tire Shopping ( cu shopping cart si checkout ) done

--- a/Vulcanizare.WEB/Pages/Appointments/Details.cshtml
+++ b/Vulcanizare.WEB/Pages/Appointments/Details.cshtml
@@ -51,13 +51,13 @@
             @Html.DisplayNameFor(model => model.Appointment.User)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Appointment.User.Id)
+            @Html.DisplayFor(model => model.Appointment.User.Email)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Appointment.Tire)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Appointment.Tire.Id)
+            @Html.DisplayFor(model => model.Appointment.Tire.Brand)
         </dd>
     </dl>
 </div>
