--- a/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
+++ b/Vulcanizare.WEB/Pages/Shared/_Layout.cshtml
@@ -59,10 +59,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/UserPages/Appointment">Make an Appointment</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/">Tire Shopping</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/UserPages/Tireshopping">Tire Shopping</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/">Tire Hotel</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/UserPages/Tirehotel">Tire Hotel</a>
                             </li>
                             
                         }
