--- a/Vulcanizare.MAUI/AppShell.xaml
+++ b/Vulcanizare.MAUI/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Vulcanizare.MAUI"
     xmlns:views="clr-namespace:Vulcanizare.MAUI.Views"
+    xmlns:model="clr-namespace:Vulcanizare.MAUI.Models"
     Shell.TabBarIsVisible="False">
 
     <ShellContent
@@ -16,6 +17,8 @@
 
     <FlyoutItem Route="HomePage" FlyoutDisplayOptions="AsMultipleItems">
         <ShellContent Title="Home" ContentTemplate="{DataTemplate views:HomePage}"/>
+        <ShellContent Title="Tires" ContentTemplate="{DataTemplate views:TirePage}"/>
+        <ShellContent Title="Appointments" ContentTemplate="{DataTemplate views:AppointmentPage}"/>
         <ShellContent Title="Contact" ContentTemplate="{DataTemplate views:ContactPage}"/>
         <ShellContent Title="About" ContentTemplate="{DataTemplate views:AboutPage}"/>
     </FlyoutItem>
