--- a/Vulcanizare.MAUI/Views/AddAppointmentPage.xaml
+++ b/Vulcanizare.MAUI/Views/AddAppointmentPage.xaml
@@ -2,28 +2,29 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vulcanizare.MAUI.Views.AddAppointmentPage"
-             Title="Adaugă Programare">
+             Title="Adauga Programare">
 
     <ScrollView>
         <VerticalStackLayout Spacing="20" Padding="30">
 
             <Label 
-                Text="Adaugă o Programare Nouă"
+                Text="Adauga o Programare Noua"
                 FontSize="24"
                 HorizontalOptions="Center"
                 FontAttributes="Bold" />
 
-            <Entry Placeholder="Titlu Programare" FontSize="Medium"/>
-            <DatePicker Format="D" FontSize="Medium"/>
-            <TimePicker Format="HH:mm" FontSize="Medium"/>
-            <Editor Placeholder="Descriere" FontSize="Medium" AutoSize="TextChanges"/>
-            <Entry Placeholder="Alte detalii" FontSize="Medium"/>
+            <Entry x:Name="titluProgramare" Placeholder="Titlu Programare" FontSize="Medium"/>
+            <DatePicker x:Name="dataProgramare" Format="D" FontSize="Medium"/>
+            <TimePicker x:Name="timpProgramare" Format="HH:mm" FontSize="Medium"/>
+            <Editor x:Name="descriereProgramare" Placeholder="Descriere" FontSize="Medium" AutoSize="TextChanges"/>
+            <Entry x:Name="alteDetalii" Placeholder="Alte detalii" FontSize="Medium"/>
 
-            <Button Text="Salvează Programarea"
+            <Button Text="Salveaza Programarea"
                     BackgroundColor="#5537dc"
                     TextColor="White"
                     FontAttributes="Bold"
-                    CornerRadius="10"/>
+                    CornerRadius="10"
+                    Clicked="OnSalveazaClicked"/>
 
         </VerticalStackLayout>
     </ScrollView>
